syntax = "proto3";
package umee.ibcratelimit.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/umee-network/umee/v3/x/ibc-rate-limit/types";

// RateLimit
message RateLimit {
    string ibc_denom = 1;
    uint64 outflow_limit = 2;
    uint64 window = 3;
}

// Params 
message Params {
    bool ibc_pause = 1;
}